# luckfox_pico_rknn_example

./: README.md  README_CN.md  Readme.md
dts/luckfox-pico_plus_fb/: rv1103g-luckfox-pico-plus-sd.dts
example/luckfox_retinaface_facenet/: README.md  README_CN.md  Readme.md
example/luckfox_retinaface_facenet/cpp/: CMakeLists.txt  main.cc  retinaface_facenet.h
example/luckfox_retinaface_facenet/cpp/include/: retinaface_facenet.h
example/luckfox_retinaface_facenet/cpp/rknpu2/: facenet.cc  retinaface.cc
example/luckfox_retinaface_facenet/cpp/src/: facenet.cc  main.cc  retinaface.cc
example/luckfox_retinaface_facenet/cpp_spi/: CMakeLists.txt
example/luckfox_retinaface_facenet/cpp_spi/include/: retinaface_facenet.h
example/luckfox_retinaface_facenet/cpp_spi/lib/Config/: CMakeLists.txt  DEV_Config.cc  DEV_Config.h  Debug.h
example/luckfox_retinaface_facenet/cpp_spi/lib/GPIO/: CMakeLists.txt  sysfs_gpio.cc  sysfs_gpio.h
example/luckfox_retinaface_facenet/cpp_spi/lib/GUI/: CMakeLists.txt  GUI_Paint.cc  GUI_Paint.h
example/luckfox_retinaface_facenet/cpp_spi/lib/LCD/: CMakeLists.txt  LCD_Driver.cc  LCD_Driver.h
example/luckfox_retinaface_facenet/cpp_spi/lib/SPI/: CMakeLists.txt  dev_hardware_SPI.cc  dev_hardware_SPI.h
example/luckfox_retinaface_facenet/cpp_spi/luckfox_retinaface_facenet_spi_demo/: luckfox_retinaface_facenet_spi_demo_test
example/luckfox_retinaface_facenet/cpp_spi/luckfox_retinaface_facenet_spi_demo/model/: RetinaFace.rknn
example/luckfox_retinaface_facenet/cpp_spi/src/: facenet.cc  main.cc  retinaface.cc
example/luckfox_retinaface_facenet/demo/luckfox_retinaface_facenet_demo/: luckfox_retinaface_facenet_demo_test
example/luckfox_retinaface_facenet/demo/luckfox_retinaface_facenet_spi_demo/: luckfox_retinaface_facenet_spi_demo_text
example/luckfox_retinaface_facenet/demo/luckfox_retinaface_facenet_spi_demo_for_plus/: luckfox_retinaface_facenet_spi_demo_text
example/luckfox_retinaface_facenet/demo/luckfox_retinaface_facenet_spi_demo_for_promax/: luckfox_retinaface_facenet_spi_demo_text
example/luckfox_retinaface_facenet/demo/luckfox_retinaface_facenet_spi_demo_for_promax/model/: mobilefacenet.rknn
example/luckfox_yolov5/: README.md  README_CN.md  Readme.md
example/luckfox_yolov5/cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  yolov5.h
example/luckfox_yolov5/cpp/include/: postprocess.h
example/luckfox_yolov5/cpp/src/: main.cc  postprocess.cc  yolov5.cc
example/luckfox_yolov5/demo/luckfox_yolov5_demo/: luckfox_yolov5_demo_test  rknn_yolov5_demo_test
scripts/luckfox_onnx_to_rknn/: README.md  README_CN.md
scripts/luckfox_onnx_to_rknn/convert/: convert.py
scripts/luckfox_onnx_to_rknn/dataset/: facenet_dataset.txt  retinaface_dataset.txt  yolov5_dataset.txt
scripts/luckfox_onnx_to_rknn/model/: facenet.rknn  retinaface.onnx  retinaface.rknn
scripts/luckfox_onnx_to_rknn/sim/facenet/: facenet.py  facenet_dataset.txt  requirements.txt
scripts/luckfox_onnx_to_rknn/sim/retinaface/: retinaface.onnx  retinaface.py
